feat:非spring环境以及分模块测试

--- a/smart-config-test/src/main/resources/application.properties
+++ b/smart-config-test/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-# 端口
-server.port=8090
-
-# server.portaa=3333
-# server.aaa=bbb
-
-
+# 本地和字段均存在配置：相同
 aaa=111
 
 
@@ -14,7 +8,6 @@ bbb=222
 
 # 仅本地存在配置
 ccc=333
-
 
 # smart配置
 smart.username=admin
