--- a/smart-config-core/pom.xml
+++ b/smart-config-core/pom.xml
@@ -57,6 +57,18 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.32</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
