--- a/smart-config-test/src/main/resources/application.properties
+++ b/smart-config-test/src/main/resources/application.properties
@@ -9,6 +9,12 @@ bbb=222
 # 仅本地存在配置
 ccc=333
 
+# list配置
+list=[4,5,6]
+
+# map配置
+obj={"key":"test_75b59494de85","value":"test_110f6a271a6c","desc":"test_18007cacd30e","status":53,"durable":false,"createDate":"2022-10-21 08:45:31","updateDate":"2024-05-22 06:05:36"}
+
 # smart配置
 smart.username=admin
 smart.password=admin
