--- a/smart-config-core/pom.xml
+++ b/smart-config-core/pom.xml
@@ -69,6 +69,12 @@
             <version>1.18.26</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
