--- a/smart-config-test-spring/pom.xml
+++ b/smart-config-test-spring/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <groupId>com.maple</groupId>
   <artifactId>smart-config-test-spring</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -14,7 +14,7 @@
       <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
-  <name>smart-config-test</name>
+  <name>smart-config-test-spring</name>
   <url>https://maven.apache.org</url>
 
   <properties>
@@ -62,6 +62,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+      <!--模拟依赖冲突-->
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+          <version>1.2.83</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+      </dependency>
 
       <dependency>
           <groupId>com.maple.smart.config.core</groupId>
