--- a/smart-config-core/pom.xml
+++ b/smart-config-core/pom.xml
@@ -67,6 +67,21 @@
             <version>1.3.6</version>
         </dependency>
 
+        <!-- The org.codehaus.janino:commons-compiler:3.1.8 dependency -->
+        <!-- will be automatically pulled in by Maven's transitivity rules -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.1.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-ext-spring</artifactId>
+            <version></version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
