build(log):core模块不存放日志
springboot应用使用springboot的默认日志；非springboot应用缺省配置日志配置文件时将日志级别设置为info

--- a/smart-config-test-spring/src/main/resources/application.properties
+++ b/smart-config-test-spring/src/main/resources/application.properties
@@ -20,3 +20,5 @@ smart.password=admin
 main.test02={"admin":"123456","test":"bbbb"}
 
 spring.application.name=smart-test
+
+logging.level.com.maple.config.core=debug
