--- a/smart-config-core/pom.xml
+++ b/smart-config-core/pom.xml
@@ -19,28 +19,12 @@
     </properties>
 
     <dependencies>
-        <!-- Jetty embedded server dependency -->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>9.4.44.v20210927</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>9.4.44.v20210927</version>
-        </dependency>
+
 
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>apache-jsp</artifactId>
+            <artifactId>jetty-webapp</artifactId>
             <version>9.4.44.v20210927</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
         </dependency>
 
         <dependency>
@@ -59,14 +43,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.3.6</version>
-        </dependency>
-
-        <!-- The org.codehaus.janino:commons-compiler:3.1.8 dependency -->
-        <!-- will be automatically pulled in by Maven's transitivity rules -->
-        <dependency>
-            <groupId>org.codehaus.janino</groupId>
-            <artifactId>janino</artifactId>
-            <version>3.1.8</version>
         </dependency>
 
         <dependency>
