--- a/smart-config-test-spring/pom.xml
+++ b/smart-config-test-spring/pom.xml
@@ -76,9 +76,15 @@
       </dependency>
 
       <dependency>
-          <groupId>com.maple.smart.config.core</groupId>
+          <groupId>io.github.yangfeng20</groupId>
           <artifactId>smart-config-core</artifactId>
-          <version>1.0-SNAPSHOT</version>
+          <version>1.0.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <scope>test</scope>
       </dependency>
 
   </dependencies>
