--- a/smart-config-test-spring/pom.xml
+++ b/smart-config-test-spring/pom.xml
@@ -78,12 +78,19 @@
       <dependency>
           <groupId>io.github.yangfeng20</groupId>
           <artifactId>smart-config-core</artifactId>
-          <version>1.0.0</version>
+          <version>1.0.2</version>
       </dependency>
 
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-test</artifactId>
+          <version>3.2.5</version>
           <scope>test</scope>
       </dependency>
 
