--- a/smart-config-core/pom.xml
+++ b/smart-config-core/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>io.github.yangfeng20</groupId>
     <artifactId>smart-config-core</artifactId>
-    <version>1.0.3-springboot3</version>
+    <version>1.0.3-springboot3-fix-1</version>
     <name>smart-config</name>
     <description>smart-config</description>
     <url>https://github.com/yangfeng20/smart-config</url>
