--- a/smart-config-test-springboot3/pom.xml
+++ b/smart-config-test-springboot3/pom.xml
@@ -95,6 +95,18 @@
       </dependency>
   </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <!--smart-config jetty-->
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-bom</artifactId>
+                <version>11.0.20</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
