perf:合并默认值回显功能以及解决报错

--- a/smart-config-test-spring/pom.xml
+++ b/smart-config-test-spring/pom.xml
@@ -78,7 +78,7 @@
       <dependency>
           <groupId>io.github.yangfeng20</groupId>
           <artifactId>smart-config-core</artifactId>
-          <version>1.0.3-springboot3-fix-1</version>
+          <version>1.0.3</version>
       </dependency>
 
       <dependency>
