--- a/smart-config-test-spring/pom.xml
+++ b/smart-config-test-spring/pom.xml
@@ -94,6 +94,19 @@
           <scope>test</scope>
       </dependency>
 
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.9.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>5.3.30</version>
+        <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
     <build>
