--- a/smart-config-test-springboot3/pom.xml
+++ b/smart-config-test-springboot3/pom.xml
@@ -88,9 +88,16 @@
       </dependency>
 
       <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>5.9.3</version>
+          <scope>test</scope>
+      </dependency>
+
+      <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
-          <version>3.2.5</version>
+          <version>3.2.8</version>
           <scope>test</scope>
       </dependency>
   </dependencies>
