--- a/smart-config-test/pom.xml
+++ b/smart-config-test/pom.xml
@@ -30,15 +30,15 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.maple.smart.config.core</groupId>
+            <groupId>io.github.yangfeng20</groupId>
             <artifactId>smart-config-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.3-springboot3-fix-1</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
